--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 400px;
 }
 input {
     width: 100%;
@@ -14,7 +15,31 @@ input {
 button {
     background: #5f9341;
     padding: 10px 20px;
-    border: none;
+    border: 1px solid #5f9341;
     color: white;
     font-weight: bold;
+}
+button:hover{
+    box-shadow: 0px 15px 25px -5px rgba(darken(dodgerblue, 40%));
+    transform: scale(1.03);
+}
+button:active{
+    box-shadow: 0px 4px 8px rgba(darken(dodgerblue, 30%));
+    transform: scale(.98);
+}
+#delete-btn{
+    background: white;
+    color: #5f9341;
+    border: 1px solid #5f9341;
+}
+ul {
+    margin-top: 20px;
+    list-style: none;
+    padding-left: 0;
+}
+li{
+    margin-top: 5px;
+}
+ul > li > a{
+    color: #5f9341;
 }
